# Project_Learn_Rust

./: README.md
desktop/first_rust_test/: main  main.rs
desktop/hello_cargo/: Cargo.toml
desktop/test_cargo/: Cargo.toml
embedded/: README.md
embedded/doc/atsamdX/SAMD21_XPLAINED_Design_Doc/BOM/: Bill of Materials Fitted- SAMD21_Xplained_Pro_release_rev2.xls
embedded/doc/atsameX/SAME54_XPLAINED_Design_Documentation/: README.md
embedded/example_scratch/: Cargo.toml  build.rs  memory.x  stuff  stuff.rs
embedded/scratch/test1_from_scratch/: Cargo.toml
embedded/scratch/test1_from_scratch/src/: main.rs
embedded/stm32discovery-tinkering/: Cargo.toml
embedded/stm32discovery-tinkering/.cargo/: config
embedded/stm32discovery-tinkering/examples/: hello.rs
embedded/stm32discovery-tinkering/src/: main.rs
embedded/tm4c123x-example/: Cargo.toml
embedded/tm4c123x-example/src/: main.rs
