[package]
name = "test1_from_scratch"
version = "0.1.0"
authors = ["Penguin <...>"]
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

[[bin]]
name = "test1_from_scratch"
test = false
bench = false

[profile.release]
codegen-units = 1 #optimizations
debug = true # symbols
lto = true # optimizations
